--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "axios": "^1.2.2",
     "formik": "^2.2.9",
     "html2canvas": "^1.4.1",
-    "jspdf": "^2.5.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "react-to-print": "^2.14.11",
     "sass": "^1.57.1",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4",
