--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "react-to-print": "^2.14.11",
+    "react-transition-group": "^4.4.5",
     "sass": "^1.57.1",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4",
@@ -50,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-transition-group": "^4.4.5",
     "webpack": "^5.75.0"
   }
 }
